--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -2319,38 +2319,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mam = data('mammals')"
+    "mam = data('Mammals')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "62\n",
-      "2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(107, 4)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# How many rows and columns are there?\n",
-    "rows = len(mam.axes[0])\n",
-    "cols = len(mam.axes[1])\n",
-    "print(rows)\n",
-    "print(cols)"
+    "mam.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -2358,14 +2357,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 62 entries, Arctic fox to Red fox\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   body    62 non-null     float64\n",
-      " 1   brain   62 non-null     float64\n",
-      "dtypes: float64(2)\n",
-      "memory usage: 1.5+ KB\n"
+      "Int64Index: 107 entries, 1 to 107\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   weight    107 non-null    float64\n",
+      " 1   speed     107 non-null    float64\n",
+      " 2   hoppers   107 non-null    bool   \n",
+      " 3   specials  107 non-null    bool   \n",
+      "dtypes: bool(2), float64(2)\n",
+      "memory usage: 2.7 KB\n"
      ]
     }
    ],
@@ -2376,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2384,14 +2385,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 62 entries, Arctic fox to Red fox\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   body    62 non-null     float64\n",
-      " 1   brain   62 non-null     float64\n",
-      "dtypes: float64(2)\n",
-      "memory usage: 1.5+ KB\n"
+      "Int64Index: 107 entries, 1 to 107\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   weight    107 non-null    float64\n",
+      " 1   speed     107 non-null    float64\n",
+      " 2   hoppers   107 non-null    bool   \n",
+      " 3   specials  107 non-null    bool   \n",
+      "dtypes: bool(2), float64(2)\n",
+      "memory usage: 2.7 KB\n"
      ]
     }
    ],
@@ -2402,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -2426,68 +2429,68 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>body</th>\n",
-       "      <th>brain</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>speed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>62.000000</td>\n",
-       "      <td>62.000000</td>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>107.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>198.789984</td>\n",
-       "      <td>283.134194</td>\n",
+       "      <td>278.688178</td>\n",
+       "      <td>46.208411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>899.158011</td>\n",
-       "      <td>930.278942</td>\n",
+       "      <td>839.608269</td>\n",
+       "      <td>26.716778</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.005000</td>\n",
-       "      <td>0.140000</td>\n",
+       "      <td>0.016000</td>\n",
+       "      <td>1.600000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.600000</td>\n",
-       "      <td>4.250000</td>\n",
+       "      <td>1.700000</td>\n",
+       "      <td>22.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>3.342500</td>\n",
-       "      <td>17.250000</td>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>48.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>48.202500</td>\n",
-       "      <td>166.000000</td>\n",
+       "      <td>142.500000</td>\n",
+       "      <td>65.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>6654.000000</td>\n",
-       "      <td>5712.000000</td>\n",
+       "      <td>6000.000000</td>\n",
+       "      <td>110.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              body        brain\n",
-       "count    62.000000    62.000000\n",
-       "mean    198.789984   283.134194\n",
-       "std     899.158011   930.278942\n",
-       "min       0.005000     0.140000\n",
-       "25%       0.600000     4.250000\n",
-       "50%       3.342500    17.250000\n",
-       "75%      48.202500   166.000000\n",
-       "max    6654.000000  5712.000000"
+       "            weight       speed\n",
+       "count   107.000000  107.000000\n",
+       "mean    278.688178   46.208411\n",
+       "std     839.608269   26.716778\n",
+       "min       0.016000    1.600000\n",
+       "25%       1.700000   22.500000\n",
+       "50%      34.000000   48.000000\n",
+       "75%     142.500000   65.000000\n",
+       "max    6000.000000  110.000000"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2498,29 +2501,310 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weight</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>hoppers</th>\n",
+       "      <th>specials</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    weight  speed  hoppers  specials\n",
+       "53    55.0  110.0    False     False"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What is the the weight of the fastest animal?\n"
+    "# What is the the weight of the fastest animal?\n",
+    "mam[mam.speed == mam.speed.max()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What is the overall percentage of specials?\n"
+    "# What is the overall percentage of specials?\n",
+    "mam.specials.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "107"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.345794392523365"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(mam.specials.sum()/len(mam))*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How many animals are hoppers that are above the median speed? What percentage is this?\n"
+    "# How many animals are hoppers that are above the median speed? What percentage is this?\n",
+    "mam_hop = mam[mam.hoppers == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weight</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>hoppers</th>\n",
+       "      <th>specials</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>0.056</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>0.035</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>0.035</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>4.600</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>4.400</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>4.000</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>3.500</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>2.000</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>1.900</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>1.500</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>1.500</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     weight  speed  hoppers  specials\n",
+       "82    0.056   21.0     True     False\n",
+       "85    0.035   32.0     True     False\n",
+       "86    0.035   14.0     True     False\n",
+       "96    4.600   64.0     True     False\n",
+       "97    4.400   72.0     True     False\n",
+       "98    4.000   72.0     True     False\n",
+       "99    3.500   56.0     True     False\n",
+       "100   2.000   64.0     True     False\n",
+       "101   1.900   56.0     True     False\n",
+       "102   1.500   50.0     True     False\n",
+       "103   1.500   40.0     True     False"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mam_hop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48.0"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mam.speed.median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.5420560747663545"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mam_hop[mam_hop.speed >= mam.speed.median()])/mam.shape[0]*100"
    ]
   }
  ],
