--- a/advanced_dataframes.ipynb
+++ b/advanced_dataframes.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4   10055  1956-06-06     Georgy     Dredge      M  1992-04-27"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,6 +1647,597 @@
     "    print('Automatic cars have better avg mpg!')\n",
     "else:\n",
     "    print('Manual cars have better avg mpg!')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Exercises III\n",
+    "Use your get_db_url function to help you explore the data from the chipotle database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f'mysql+pymysql://{username}:{password}@{host}/chipotle'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_c = pd.read_sql(''' SELECT *\n",
+    "FROM orders\n",
+    "''', url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>11.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>16.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>12.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>21.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>13.70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  total\n",
+       "0         1  11.56\n",
+       "1         2  16.98\n",
+       "2         3  12.67\n",
+       "3         4  21.00\n",
+       "4         5  13.70"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is the total price for each order?\n",
+    "pd.read_sql(''' select \n",
+    "order_id, sum(cast(replace(item_price,'$','')as float)) as total\n",
+    "from orders\n",
+    "group by order_id\n",
+    "''',url).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>total_ordered</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chicken Bowl</td>\n",
+       "      <td>761.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chicken Burrito</td>\n",
+       "      <td>591.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Chips and Guacamole</td>\n",
+       "      <td>506.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             item_name  total_ordered\n",
+       "0         Chicken Bowl          761.0\n",
+       "1      Chicken Burrito          591.0\n",
+       "2  Chips and Guacamole          506.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What are the most popular 3 items?\n",
+    "pd.read_sql('''select item_name, SUM(quantity) as total_ordered\n",
+    "from orders\n",
+    "group by item_name\n",
+    "order by total_ordered desc\n",
+    "limit 3''',url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>total_rev</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chicken Bowl</td>\n",
+       "      <td>$8,044.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      item_name  total_rev\n",
+       "0  Chicken Bowl  $8,044.63"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Which item has produced the most revenue?\n",
+    "pd.read_sql(''' \n",
+    "SELECT item_name, CONCAT('$',FORMAT(SUM(quantity*CAST(REPLACE(item_price,'$','') AS DECIMAL(10,2))),2)) as total_rev\n",
+    "FROM orders\n",
+    "GROUP BY item_name\n",
+    "ORDER BY SUM(quantity*\n",
+    "CAST(REPLACE(item_price,'$','') AS DECIMAL(10,2))) DESC\n",
+    "LIMIT 1''',url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Join the employees and titles DataFrames together.\n",
+    "url = f'mysql+pymysql://{username}:{password}@{host}/employees'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>hire_date</th>\n",
+       "      <th>title</th>\n",
+       "      <th>from_date</th>\n",
+       "      <th>to_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>1953-09-02</td>\n",
+       "      <td>Georgi</td>\n",
+       "      <td>Facello</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-06-26</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1986-06-26</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>1964-06-02</td>\n",
+       "      <td>Bezalel</td>\n",
+       "      <td>Simmel</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1985-11-21</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>1996-08-03</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>1959-12-03</td>\n",
+       "      <td>Parto</td>\n",
+       "      <td>Bamford</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-08-28</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1995-12-03</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>1954-05-01</td>\n",
+       "      <td>Chirstian</td>\n",
+       "      <td>Koblick</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>1995-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>1954-05-01</td>\n",
+       "      <td>Chirstian</td>\n",
+       "      <td>Koblick</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1995-12-01</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443303</th>\n",
+       "      <td>499997</td>\n",
+       "      <td>1961-08-03</td>\n",
+       "      <td>Berhard</td>\n",
+       "      <td>Lenart</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-04-21</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>1987-08-30</td>\n",
+       "      <td>1992-08-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443304</th>\n",
+       "      <td>499997</td>\n",
+       "      <td>1961-08-03</td>\n",
+       "      <td>Berhard</td>\n",
+       "      <td>Lenart</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-04-21</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1992-08-29</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443305</th>\n",
+       "      <td>499998</td>\n",
+       "      <td>1956-09-05</td>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>Breugel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1993-10-13</td>\n",
+       "      <td>Senior Staff</td>\n",
+       "      <td>1998-12-27</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443306</th>\n",
+       "      <td>499998</td>\n",
+       "      <td>1956-09-05</td>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>Breugel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1993-10-13</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>1993-12-27</td>\n",
+       "      <td>1998-12-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>443307</th>\n",
+       "      <td>499999</td>\n",
+       "      <td>1958-05-01</td>\n",
+       "      <td>Sachin</td>\n",
+       "      <td>Tsukuda</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1997-11-30</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>1997-11-30</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>443308 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        emp_no  birth_date first_name last_name gender   hire_date  \\\n",
+       "0        10001  1953-09-02     Georgi   Facello      M  1986-06-26   \n",
+       "1        10002  1964-06-02    Bezalel    Simmel      F  1985-11-21   \n",
+       "2        10003  1959-12-03      Parto   Bamford      M  1986-08-28   \n",
+       "3        10004  1954-05-01  Chirstian   Koblick      M  1986-12-01   \n",
+       "4        10004  1954-05-01  Chirstian   Koblick      M  1986-12-01   \n",
+       "...        ...         ...        ...       ...    ...         ...   \n",
+       "443303  499997  1961-08-03    Berhard    Lenart      M  1986-04-21   \n",
+       "443304  499997  1961-08-03    Berhard    Lenart      M  1986-04-21   \n",
+       "443305  499998  1956-09-05   Patricia   Breugel      M  1993-10-13   \n",
+       "443306  499998  1956-09-05   Patricia   Breugel      M  1993-10-13   \n",
+       "443307  499999  1958-05-01     Sachin   Tsukuda      M  1997-11-30   \n",
+       "\n",
+       "                  title   from_date     to_date  \n",
+       "0       Senior Engineer  1986-06-26  9999-01-01  \n",
+       "1                 Staff  1996-08-03  9999-01-01  \n",
+       "2       Senior Engineer  1995-12-03  9999-01-01  \n",
+       "3              Engineer  1986-12-01  1995-12-01  \n",
+       "4       Senior Engineer  1995-12-01  9999-01-01  \n",
+       "...                 ...         ...         ...  \n",
+       "443303         Engineer  1987-08-30  1992-08-29  \n",
+       "443304  Senior Engineer  1992-08-29  9999-01-01  \n",
+       "443305     Senior Staff  1998-12-27  9999-01-01  \n",
+       "443306            Staff  1993-12-27  1998-12-27  \n",
+       "443307         Engineer  1997-11-30  9999-01-01  \n",
+       "\n",
+       "[443308 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emp_t = pd.read_sql('''select *\n",
+    "from employees as e\n",
+    "join titles as t using (emp_no)\n",
+    "''',url)\n",
+    "emp_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title\n",
+      "Assistant Engineer   1999-12-24\n",
+      "Engineer             2000-01-28\n",
+      "Manager              1992-02-05\n",
+      "Senior Engineer      2000-01-01\n",
+      "Senior Staff         2000-01-13\n",
+      "Staff                2000-01-12\n",
+      "Technique Leader     1999-12-31\n",
+      "Name: hire_date, dtype: datetime64[ns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For each title, find the hire date of the employee that was hired most recently with that title.\n",
+    "emp_t['hire_date'] = pd.to_datetime(emp_t['hire_date'])\n",
+    "most_recent_hire_dates = emp_t.groupby('title')['hire_date'].max()\n",
+    "print(most_recent_hire_dates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>dept_name</th>\n",
+       "      <td>Customer Service</td>\n",
+       "      <td>Development</td>\n",
+       "      <td>Finance</td>\n",
+       "      <td>Human Resources</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>Production</td>\n",
+       "      <td>Quality Management</td>\n",
+       "      <td>Research</td>\n",
+       "      <td>Sales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>count(t.title)</th>\n",
+       "      <td>35075</td>\n",
+       "      <td>125586</td>\n",
+       "      <td>26070</td>\n",
+       "      <td>26618</td>\n",
+       "      <td>30138</td>\n",
+       "      <td>107608</td>\n",
+       "      <td>29346</td>\n",
+       "      <td>31461</td>\n",
+       "      <td>78001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               0            1        2                3  \\\n",
+       "dept_name       Customer Service  Development  Finance  Human Resources   \n",
+       "count(t.title)             35075       125586    26070            26618   \n",
+       "\n",
+       "                        4           5                   6         7      8  \n",
+       "dept_name       Marketing  Production  Quality Management  Research  Sales  \n",
+       "count(t.title)      30138      107608               29346     31461  78001  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Write the code necessary to create a cross tabulation of the number of titles by department. \n",
+    "dept_totals = pd.read_sql('''select d.dept_name, count(t.title)\n",
+    "from titles as t\n",
+    "join dept_emp as de using (emp_no)\n",
+    "join departments as d using (dept_no)\n",
+    "group by d.dept_name''',url).T\n",
+    "dept_totals"
    ]
   }
  ],
